add_subdirectory(Alignment)

add_subdirectory(BeamSpot)

add_subdirectory(BTauReco)

add_subdirectory(CaloRecHit)

add_subdirectory(CaloTowers)

add_subdirectory(Candidate)

add_subdirectory(CastorReco)

add_subdirectory(CLHEP)

add_subdirectory(Common)

add_subdirectory(CSCDigi)

add_subdirectory(CSCRecHit)

add_subdirectory(CTPPSDetId)

add_subdirectory(CTPPSDigi)

add_subdirectory(CTPPSReco)

add_subdirectory(DetId)

add_subdirectory(DTDigi)

add_subdirectory(DTRecHit)

add_subdirectory(EcalDetId)

add_subdirectory(EcalDigi)

add_subdirectory(EcalRawData)

add_subdirectory(EcalRecHit)

add_subdirectory(EgammaCandidates)

add_subdirectory(EgammaReco)

add_subdirectory(EgammaTrackReco)

add_subdirectory(FEDRawData)

add_subdirectory(ForwardDetId)

add_subdirectory(FP420Cluster)

add_subdirectory(FP420Digi)

add_subdirectory(FTLDigi)

add_subdirectory(FTLRecHit)

add_subdirectory(FWLite)

add_subdirectory(GEMDigi)

add_subdirectory(GEMRecHit)

add_subdirectory(GeometryCommonDetAlgo)

add_subdirectory(GeometrySurface)

add_subdirectory(GeometryVector)

add_subdirectory(GsfTrackReco)

add_subdirectory(HcalCalibObjects)

add_subdirectory(HcalDetId)

add_subdirectory(HcalDigi)

add_subdirectory(HcalIsolatedTrack)

add_subdirectory(HcalRecHit)

add_subdirectory(HeavyIonEvent)

add_subdirectory(HepMCCandidate)

add_subdirectory(HGCalReco)

add_subdirectory(HGCDigi)

add_subdirectory(HGCRecHit)

add_subdirectory(Histograms)

add_subdirectory(HLTReco)

add_subdirectory(JetReco)

add_subdirectory(L1CaloTrigger)

add_subdirectory(L1CSCTrackFinder)

add_subdirectory(L1DTTrackFinder)

add_subdirectory(L1GlobalCaloTrigger)

add_subdirectory(L1GlobalMuonTrigger)

add_subdirectory(L1GlobalTrigger)

add_subdirectory(L1TCalorimeter)

add_subdirectory(L1TCalorimeterPhase2)

add_subdirectory(L1TCorrelator)

add_subdirectory(L1TGlobal)

add_subdirectory(L1THGCal)

add_subdirectory(L1TMuon)

add_subdirectory(L1TParticleFlow)

add_subdirectory(L1TrackTrigger)

add_subdirectory(L1Trigger)

add_subdirectory(LTCDigi)

add_subdirectory(Luminosity)

add_subdirectory(Math)

add_subdirectory(METReco)

add_subdirectory(MuonDetId)

add_subdirectory(MuonReco)

add_subdirectory(MuonSeed)

add_subdirectory(NanoAOD)

add_subdirectory(OnlineMetaData)

add_subdirectory(ParticleFlowCandidate)

add_subdirectory(ParticleFlowReco)

add_subdirectory(PatCandidates)

add_subdirectory(Phase2TrackerCluster)

add_subdirectory(Phase2TrackerDigi)

add_subdirectory(ProtonReco)

add_subdirectory(Provenance)

add_subdirectory(RecoCandidate)

add_subdirectory(RPCDigi)

add_subdirectory(RPCRecHit)

add_subdirectory(Scalers)

add_subdirectory(Scouting)

add_subdirectory(SiPixelCluster)

add_subdirectory(SiPixelDetId)

add_subdirectory(SiPixelDigi)

add_subdirectory(SiPixelRawData)

add_subdirectory(SiStripCluster)

add_subdirectory(SiStripCommon)

add_subdirectory(SiStripDetId)

add_subdirectory(SiStripDigi)

add_subdirectory(StdDictionaries)

add_subdirectory(Streamer)

add_subdirectory(TauReco)

add_subdirectory(TCDS)

add_subdirectory(TestObjects)

add_subdirectory(TrackCandidate)

add_subdirectory(TrackerCommon)

add_subdirectory(TrackerRecHit2D)

add_subdirectory(TrackingRecHit)

add_subdirectory(TrackReco)

add_subdirectory(TrajectorySeed)

add_subdirectory(TrajectoryState)

add_subdirectory(V0Candidate)

add_subdirectory(VertexReco)

add_subdirectory(WrappedStdDictionaries)

add_subdirectory(MuonData)



set(pythondir ${CMAKE_BINARY_DIR}/python/DataFormats)

file(MAKE_DIRECTORY ${pythondir})

file(WRITE  "${pythondir}/__init__.py" "#autogenerated
import os
__path__.append(os.path.dirname(os.path.realpath(__file__)))")
# Meta-target that builds everything in this subsystem
add_custom_target(DataFormats_all)

add_dependencies(DataFormats_all
  DataFormatsBTauReco
  DataFormatsBeamSpot
  DataFormatsCSCDigi
  DataFormatsCSCRecHit
  DataFormatsCTPPSDetId
  DataFormatsCTPPSDigi
  DataFormatsCTPPSReco
  DataFormatsCaloRecHit
  DataFormatsCaloTowers
  DataFormatsCandidate
  DataFormatsCastorReco
  DataFormatsCommon
  DataFormatsDTDigi
  DataFormatsDTRecHit
  DataFormatsDetId
  DataFormatsEcalDetId
  DataFormatsEcalDigi
  DataFormatsEcalRecHit
  DataFormatsEgammaCandidates
  DataFormatsEgammaReco
  DataFormatsEgammaTrackReco
  DataFormatsFEDRawData
  DataFormatsFTLRecHit
  DataFormatsForwardDetId
  DataFormatsGEMDigi
  DataFormatsGEMRecHit
  DataFormatsGeometryCommonDetAlgo
  DataFormatsGeometrySurface
  DataFormatsGeometryVector
  DataFormatsGsfTrackReco
  DataFormatsHGCRecHit
  DataFormatsHLTReco
  DataFormatsHcalDetId
  DataFormatsHcalDigi
  DataFormatsHcalIsolatedTrack
  DataFormatsHcalRecHit
  DataFormatsHepMCCandidate
  DataFormatsJetReco
  DataFormatsL1CSCTrackFinder
  DataFormatsL1CaloTrigger
  DataFormatsL1DTTrackFinder
  DataFormatsL1GlobalCaloTrigger
  DataFormatsL1GlobalMuonTrigger
  DataFormatsL1GlobalTrigger
  DataFormatsL1TCalorimeter
  DataFormatsL1TGlobal
  DataFormatsL1TMuon
  DataFormatsL1Trigger
  DataFormatsMETReco
  DataFormatsMath
  DataFormatsMuonDetId
  DataFormatsMuonReco
  DataFormatsOnlineMetaData
  DataFormatsParticleFlowCandidate
  DataFormatsParticleFlowReco
  DataFormatsPatCandidates
  DataFormatsProtonReco
  DataFormatsProvenance
  DataFormatsRPCRecHit
  DataFormatsRecoCandidate
  DataFormatsScalers
  DataFormatsSiPixelCluster
  DataFormatsSiPixelDetId
  DataFormatsSiStripCluster
  DataFormatsSiStripDetId
  DataFormatsSiStripDigi
  DataFormatsTCDS
  DataFormatsTauReco
  DataFormatsTrackCandidate
  DataFormatsTrackReco
  DataFormatsTrackerCommon
  DataFormatsTrackerRecHit2D
  DataFormatsTrackingRecHit
  DataFormatsVertexReco
)
